--- a/coffee-store-client/src/index.css
+++ b/coffee-store-client/src/index.css
@@ -1,3 +1,6 @@
+/* Google Font */
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&family=Rancho&display=swap");
+
 /* Tailwind CSS */
 @tailwind base;
 @tailwind components;
